--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="he" dir="rtl">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/fixmen-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="FixMen - פתרונות בנייה ושיפוצים מקצועיים. מהירות, אמינות ואיכות ללא פשרות" />
+    <meta
+      name="description"
+      content="FixMen - פתרונות בנייה ושיפוצים מקצועיים. מהירות, אמינות ואיכות ללא פשרות"
+    />
     <title>FixMen - פתרונות בנייה מקצועיים</title>
   </head>
   <body>
